wip: theme updated

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,6 @@
 }
 
 .action-btn {
-  background-color: #3F51B5; /* Dark blue for action buttons */
-  color: #ffffff; /* White text */
   border: none; /* No border */
   cursor: pointer; /* Pointer cursor on hover */
   transition:
@@ -31,7 +29,7 @@
 
 .action-btn:hover {
   background-color: #ffffff; /* Change background on hover */
-  color: #FF5722; /* Change text color on hover */
+  color: var(--color-bg-secondary); /* Change text color on hover */
   transform: scale(1.05); /* Slightly scale up on hover for a better visual cue */
 }
 
@@ -42,7 +40,7 @@
   border-left: 2px solid #ccc; /* Light gray border */
   height: 100vh;
   overflow-y: auto; /* Enable scrolling if content exceeds height */
-  color: #000000; /* Black text */
+  color: var(--color-font-primary);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
@@ -62,7 +60,7 @@
   margin: 5px; /* Added margin for spacing between inputs */
   padding: 8px; /* Added padding for comfort */
   border-radius: 4px; /* Rounded corners */
-  border: 1px solid #e5e5e5; /* Light gray border for scores */
+  border: 1px solid var(--color-bg-secondary-muted); /* Light gray border for scores */
 }
 
 .titleHolder {
@@ -73,7 +71,6 @@
 
 .titleHolder h1 {
   margin: 0; /* Remove bottom margin */
-  color: #000000; /* Black for main title */
   font-size: 2.5em; /* Increased font size for emphasis */
 }
 
@@ -105,6 +102,9 @@
 }
 .align-center{
   justify-content: center;
+}
+.icon{
+  color: #009688; /* Team icon color */
 }
 
 /* Medium devices (tablets, 768px - 1024px) */
