--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,28 @@
 :root {
   /* General Styles */
-  --color-black: #000000;
-  --color-dark-blue: #14213d;
-  --color-orange: #FF5722;
-  --color-light-gray: #e5e5e5;
-  --color-white: #ffffff;
+
+
+  --color-bg-primary: #3F51B5;
+  --color-font-primary: #000000;
+  --color-font-primary: #263238;
+  --color-bg-primary-muted: #b0bec5;
+
+
+  --color-bg-secondary: #FF5722;
+  --color-bg-secondary-muted: #E0E0E0;
+  --color-font-secondary: #ffffff;
+
+  --color-bg-tertiary: #FFFFFF;
+  --color-font-tertiary: #14213d;
+
 
   /* Font Styles */
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: var(--color-black);
-  background-color: var(--color-white);
+  color: var(--color-font-primary);
+  background-color: var(--color-font-secondary);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -28,8 +38,8 @@ body {
   align-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: var(--color-white);
-  color: var(--color-black);
+  background-color: var(--color-font-secondary);
+  color: var(--color-font-primary);
   max-width: 1024px;
   font-size: 12px;
 }
@@ -37,17 +47,17 @@ body {
 h1 {
   font-size: 2.5em;
   line-height: 1.1;
-  color: var(--color-dark-blue);
+  color: var(--color-font-tertiary);
 }
 
 a {
   font-weight: 500;
-  color: var(--color-orange);
+  color: var(--color-bg-secondary);
   text-decoration: none; /* Set to none for cleaner styling */
 }
 
 a:hover {
-  color: var(--color-dark-blue);
+  color: var(--color-font-tertiary);
 }
 
 ul {
@@ -55,50 +65,58 @@ ul {
   margin: 0;
 }
 button {
+  background-color: var(--color-bg-primary);
   padding: 0.6em 1.2em;
   font-size: 2em;
   font-weight: 500;
   font-family: inherit;
-  background-color: var(--color-white);
-  color: var(--color-black);
+  color: var(--color-font-secondary); /* White text */
   border: 1px solid transparent;
   border-radius: 4px;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+button:disabled {
+  background-color: var(--color-bg-primary-muted); 
+  color: #ffffff; /* Keep white text */
+  cursor: not-allowed; /* Change cursor to not-allowed */
+  opacity: 0.6; /* Reduce opacity for a disabled effect */
+  transform: none; /* No scale transformation */
+  transition: none; /* Remove transition effects */
+}
 
 button:hover {
-  border-color: var(--color-orange);
+  border-color: var(--color-bg-secondary);
 }
 
 button:focus,
 button:focus-visible {
-  outline: 2px solid #FF5722;
+  outline: 2px solid var(--color-bg-secondary);
 }
 
 button.secondary {
-  background-color: var(--color-white);
-  color: var(--color-black);
+  background-color: var(--color-font-secondary);
+  color: var(--color-font-primary);
 }
 
 button.secondary:hover {
-  background-color: var(--color-orange);
-  color: var(--color-white);
+  background-color: var(--color-bg-secondary);
+  color: var(--color-font-secondary);
 }
 
 input {
   padding: 8px;
   width: 100%;
   background-color: #FFFFFF; /* Light gray background for inputs */
-  color: #000000; /* Black text for contrast */
-  border: 1px solid #FF5722; /* Light gray border */
+  color: var(--color-font-primary);
+  border: 1px solid var(--color-bg-secondary); /* Light gray border */
   border-radius: 4px; /* Rounded corners */
   outline: none; /* Remove default focus outline */
   box-sizing: border-box;
   font-size: 2em;
 }
 input:focus-visible {
-  border: 2px solid var(--color-orange);
+  border: 2px solid var(--color-bg-secondary);
 }
 .container {
   box-sizing: border-box;
@@ -116,7 +134,7 @@ input {
   box-sizing: border-box;
   padding: 10px; /* Consistent padding */
   margin: 0; /* Consistent margin */
-  border: 1px solid #FF5722; /* Dark blue border */
+  border: 1px solid var(--color-bg-secondary); /* Dark blue border */
   border-radius: 4px; /* Rounded corners */
 }
 
