--- a/src/styles/TeamContainer.css
+++ b/src/styles/TeamContainer.css
@@ -18,13 +18,13 @@
     /* padding: 10px; */
     /* font-size: 1em; */
     /* border-radius: 8px; */
-    /* border: 1px solid #ccc; */
+    border: 1px solid var(--color-bg-secondary);
     text-align: center;
 }
 
 .manual-input-container input:focus {
   outline: none;
-  border-color: #FF5722;
+  border-color: var(--color-bg-secondary);
   box-shadow: 0 0 5px rgba(252, 163, 17, 0.5);
 }
 
